package player

type Player interface {
	GetMove() (string, string)
}
